--- a/CSS/Tailwind-CSS/vite-project/package.json
+++ b/CSS/Tailwind-CSS/vite-project/package.json
@@ -1,15 +1,19 @@
 {
   "name": "vite-project",
+  "homepage": "https://quackkduck.github.io/30DC/CSS/Tailwind-CSS/vite-project",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "predeploy": "npm run build",
+    "deploy": "vite build && gh-pages -d dist",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "glob": "^11.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0"
